--- a/Rkeeper/View/Admin/AdminView.xaml
+++ b/Rkeeper/View/Admin/AdminView.xaml
@@ -6,7 +6,8 @@
              xmlns:local="clr-namespace:Rkeeper.View.Admin"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Style="{StaticResource UserControlStyle}">
     <Grid>
 
         <Grid.RowDefinitions>
@@ -39,48 +40,26 @@
 
             </Grid.RowDefinitions>
 
-            <Grid.Resources>
 
-                <Style TargetType="Button">
 
-                    <Setter Property="Margin" Value="15,20"/>
-
-                    <Setter Property="FontSize" Value="28"/>
-
-                    <Setter Property="FontWeight" Value="Black"/>
-
-                </Style>
-
-            </Grid.Resources>
-
-            <Button Command="{Binding AddFoodToMenuCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}" FontSize="40">
-
+            <Button Command="{Binding AddFoodToMenuCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}" FontSize="40" Height="140" Width="250" FontWeight="Black" materialDesign:ButtonAssist.CornerRadius="10">
                 <Button.Content>
-
                     <TextBlock TextWrapping="Wrap" Text="Add Food to Menu" TextAlignment="Center"/>
-
                 </Button.Content>
-
             </Button>
 
-            <Button Grid.Row="1" Command="{Binding TableCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}">
+            <Button Grid.Row="1" Command="{Binding TableCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}" Height="140" Width="250" FontWeight="Black" materialDesign:ButtonAssist.CornerRadius="10">
                 <Button.Content>
-
                     <TextBlock TextWrapping="Wrap" Text="Change Theme" TextAlignment="Center" FontSize="40"/>
-
                 </Button.Content>
             </Button>
 
-            <Button Grid.Column="1" Grid.Row="1" Content="Log File" Command="{Binding LogFileCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}" FontSize="40"/>
+            <Button Grid.Column="1" Grid.Row="1" Content="Log File" Command="{Binding LogFileCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}" FontSize="40" Height="140" FontWeight="Black" materialDesign:ButtonAssist.CornerRadius="10"/>
 
-            <Button Grid.Column="1" Grid.Row="0" Command="{Binding DownloadPDFCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}">
-
+            <Button Grid.Column="1" Grid.Row="0" Command="{Binding DownloadPDFCommand}" Background="{DynamicResource MainColor}" Foreground="{DynamicResource BackColor}" Height="140" FontWeight="Black" materialDesign:ButtonAssist.CornerRadius="10">
                 <Button.Content>
-
                     <TextBlock TextWrapping="Wrap" Text="Download History PDF" TextAlignment="Center" FontSize="40"/>
-
                 </Button.Content>
-
             </Button>
 
         </Grid>
