--- a/Rkeeper/View/MainView.xaml
+++ b/Rkeeper/View/MainView.xaml
@@ -7,6 +7,7 @@
         xmlns:viewModel="clr-namespace:Rkeeper.ViewModel"
         xmlns:view="clr-namespace:Rkeeper.View.MainWindowComponentsView"
         xmlns:adminView="clr-namespace:Rkeeper.View.Admin"
+        xmlns:md="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
 		WindowStartupLocation="CenterScreen"
         Width="1100"
