--- a/Rkeeper/Styles/LightTheme.xaml
+++ b/Rkeeper/Styles/LightTheme.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    <SolidColorBrush Color="Black" x:Key="TextColor"/>
     <SolidColorBrush Color="#F2F2F2" x:Key="BackColor"/>
     <SolidColorBrush Color="#6BBEF2" x:Key="BehindColor"/>
     <SolidColorBrush Color="#0597F2" x:Key="MainColor"/>
