--- a/Rkeeper/View/LoginRegisterView/LoginView.xaml
+++ b/Rkeeper/View/LoginRegisterView/LoginView.xaml
@@ -36,9 +36,9 @@
 
             <TextBlock Text="LOGIN" Foreground="{DynamicResource MainColor}" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="50"/>
 
-            <TextBox Name="Username" Grid.Row="1" Text="{Binding UsernameString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="20" materialDesign:HintAssist.Hint="Username" materialDesign:HintAssist.IsFloating="True" Margin="20 12"/>
+            <TextBox Name="Username" Grid.Row="1" Foreground="{DynamicResource TextColor}" Text="{Binding UsernameString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontSize="20" materialDesign:HintAssist.Hint="Username" materialDesign:HintAssist.IsFloating="True" Margin="20 12"/>
 
-            <PasswordBox x:Name="Password" Grid.Row="2" FontSize="20" materialDesign:PasswordBoxAssist.Password="{Binding PasswordString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Password" materialDesign:HintAssist.IsFloating="True" Margin="20 12"/>
+            <PasswordBox x:Name="Password" Grid.Row="2" Foreground="{DynamicResource TextColor}" FontSize="20" materialDesign:PasswordBoxAssist.Password="{Binding PasswordString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" materialDesign:HintAssist.Hint="Password" materialDesign:HintAssist.IsFloating="True" Margin="20 12"/>
 
             <Grid Grid.Row="3" Margin="0,20">
 
@@ -49,7 +49,7 @@
 
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0" Text="You are not registered yet?" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16"/>
+                <TextBlock Grid.Column="0" Foreground="{DynamicResource TextColor}" Text="You are not registered yet?" VerticalAlignment="Center" HorizontalAlignment="Right" FontSize="16"/>
 
                 <Button Name="AdditionalRegisterBtn" Grid.Column="1" Style="{StaticResource AdditionalBtnStyle}" Command="{Binding NavigateRegisterCommand}">
 
